--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
+
+    <title>Noble Arem Riak – South Sudanese Edupreneur and Educator</title>
+    <meta
+      name="description"
+      content="Noble Arem Riak is a highly educated leader who has built a strong reputation in South Sudan’s education sector. His achievements include founding two prominent school systems, Darling Wisdom Academy and Amonto Girls Academy"
+    />
     <meta name="author" content="Lovable" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Noble Arem Riak – South Sudanese Edupreneur and Educator" />
+    <meta
+      property="og:description"
+      content="Noble Arem Riak is a highly educated leader who has built a strong reputation in South Sudan’s education sector. His achievements include founding two prominent school systems, Darling Wisdom Academy and Amonto Girls Academy"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@noblearemriak" />
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
