--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Noble Arem Riak is a highly educated leader who has built a strong reputation in South Sudan’s education sector. His achievements include founding two prominent school systems, Darling Wisdom Academy and Amonto Girls Academy"
     />
-    <meta name="author" content="Lovable" />
+    <meta name="Noble Arem Riak" content="Noble Arem Riak is a highly educated leader who has built a strong reputation in South Sudan’s education sector. His achievements include founding two prominent school systems, Darling Wisdom Academy and Amonto Girls Academy" />
 
     <meta property="og:title" content="Noble Arem Riak – South Sudanese Edupreneur and Educator" />
     <meta
